--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,11 +1,5 @@
 ---
 # tasks file for packages
-
-- name: Collect only facts returned by facter
-  ansible.builtin.setup:
-    gather_subset:
-      - 'all'
-    
 - block:
   - name: Template APT source.list
     ansible.builtin.template:
@@ -32,6 +26,10 @@
       - "{{ apt_repositories }}"
     when: apt_repositories is defined
 
+  - name: Update apt cache
+    ansible.builtin.apt:
+      update_cache: yes
+
   - name: Install APT packages
     ansible.builtin.apt:
       name: "{{ item.apt | default(item.name) }}"
@@ -44,10 +42,20 @@
       upgrade: "{{ item.upgrade | default(omit) }}"
       install_recommends: "{{ item.apt_install_recommends | default(omit) }}"
     when: (item.apt_ignore|default('no'))|string in 'False,false,No,no'
-    with_items: "{{ packages }}"  
+    with_items: "{{ packages }}"
+
+  - name: upgrade all packages
+    ansible.builtin.apt:
+      name: *
+      state: latest
+
   when: ansible_pkg_mgr == 'apt'
 
 - block:
+  - name: Update yum cache
+    ansible.builtin.yum:
+      update_cache: yes
+
   - name: yum
     ansible.builtin.yum:
       name: "{{ item.yum | default(item.name) }}"
@@ -55,13 +63,29 @@
       update_cache: "{{ package_update_cache }}"
     when: (item.yum_ignore|default('no'))|string in 'False,false,No,no'
     with_items: "{{ packages }}"
+
+  - name: upgrade all packages
+    ansible.builtin.yum:
+      name: *
+      state: latest
+
   when: ansible_pkg_mgr == 'yum'
 
 - block:
+  - name: Update dnf cache
+    ansible.builtin.dnf:
+      update_cache: yes
+
   - name: dnf
     ansible.builtin.dnf:
       name: "{{ item.dnf | default(item.name) }}"
       state: "{{ item.state | default('present') }}"
     when: (item.dnf_ignore|default('no'))|string in 'False,false,No,no'
     with_items: "{{ packages }}"
+
+  - name: upgrade all packages
+    ansible.builtin.dnf:
+      name: *
+      state: latest
+
   when: ansible_pkg_mgr == 'dnf'
